# ESP32-S3-Touch-LCD

./: sdkconfig  业务逻辑.docx
gui_guider/: lvgl_Mahjong.guiguider
main/: CMakeLists.txt  main.c
main/ui/custom/: custom.c  custom.mk  lv_conf_ext.h
